Added own annotations, Fixex pom files and module-info